<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dialog_padding">

    <ImageView
        android:id="@+id/iv_avatar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_image_height"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/edt_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:textColor="@color/orange_700"
        android:hint="@string/phone"
        android:textAlignment="center"
        tools:ignore="Autofill" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dialog_button_margin"
            android:layout_weight="1"
            android:text="@string/save_button"
            android:textColor="@color/white"
            android:backgroundTint="@color/green"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dialog_button_margin"
            android:layout_weight="1"
            android:text="@string/delete_button"
            android:textColor="@color/white"
            android:backgroundTint="@color/red"
            style="?android:attr/buttonBarButtonStyle" />

    </TableRow>
</LinearLayout>